--- a/src/main/resources/org/example/trabalhoapresentar/hello-view.fxml
+++ b/src/main/resources/org/example/trabalhoapresentar/hello-view.fxml
@@ -1,11 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.VBox?>
+<?xml version="1.0" encoding="UTF-8"?> <!-- Define a versão do XML e o tipo de codificação de caracteres -->
+<?import javafx.scene.control.Button?> <!-- Importa a classe Button do JavaFX para usar botões na interface -->
+<?import javafx.scene.layout.VBox?> <!-- Importa a classe VBox do JavaFX para usar um layout de caixa vertical -->
 
-<VBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.trabalhoapresentar.MenuController"
-      alignment="CENTER" spacing="10">
+<!-- Define a estrutura da interface gráfica (UI) utilizando a linguagem FXML -->
+<VBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.trabalhoapresentar.MenuController" alignment="CENTER" spacing="10">
+    <!-- VBox é um layout que organiza os componentes de forma vertical -->
+
+    <!-- Botão para consultar o estoque -->
     <Button fx:id="btnProduto" text="Consultar Estoque"/>
+
+    <!-- Botão para acessar o inventário -->
     <Button fx:id="btnInventario" text="Inventário"/>
 </VBox>
