--- a/src/main/resources/org/example/trabalhoapresentar/inventario.fxml
+++ b/src/main/resources/org/example/trabalhoapresentar/inventario.fxml
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
+<?xml version="1.0" encoding="UTF-8"?> <!-- Define a versão do XML e o tipo de codificação de caracteres -->
+<?import javafx.scene.control.Button?> <!-- Importa a classe Button do JavaFX para usar um botão na interface -->
+<?import javafx.scene.control.ListView?> <!-- Importa a classe ListView do JavaFX para usar uma lista de itens -->
+<?import javafx.scene.control.TextField?> <!-- Importa a classe TextField do JavaFX para usar um campo de texto -->
+<?import javafx.scene.layout.VBox?> <!-- Importa a classe VBox do JavaFX para usar um layout de caixa vertical -->
 
-<VBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.trabalhoapresentar.InventarioController"
-      alignment="CENTER" spacing="10">
+<!-- Define a estrutura da interface gráfica (UI) utilizando a linguagem FXML -->
+<VBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.trabalhoapresentar.InventarioController" alignment="CENTER" spacing="10">
+
+    <!-- Campo de texto para o usuário digitar o código do produto -->
     <TextField fx:id="txtCodigoProduto" promptText="Digite o código do produto"/>
+
+    <!-- Lista onde os produtos contados serão exibidos -->
     <ListView fx:id="listaProdutos" prefWidth="300" prefHeight="200"/>
+
+    <!-- Botão para finalizar a contagem dos produtos -->
     <Button fx:id="btnFinalizarContagem" text="Finalizar Contagem"/>
 </VBox>
